--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "@jesus-film/ark.elements.footer": "^0.0.4",
+    "@jesus-film/ark.elements.navigation": "^0.0.1",
+    "@jesus-film/ark.providers.i18n-provider": "^0.0.1",
+    "@jesus-film/ark.providers.jesus-film-theme-provider": "^0.0.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "graphql": "^14.7.0",
+    "graphql-request": "^3.4.0",
     "next": "10.2.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.1",
+    "next-transpile-modules": "^7.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.2"
   }
 }
