--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
-    "@jesus-film/ark.elements.footer": "^0.0.4",
-    "@jesus-film/ark.elements.navigation": "^0.0.1",
-    "@jesus-film/ark.providers.i18n-provider": "^0.0.1",
-    "@jesus-film/ark.providers.jesus-film-theme-provider": "^0.0.5",
+    "@jesus-film/ark.elements.core": "^0.0.1",
+    "@jesus-film/ark.providers.core": "^0.0.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "graphql": "^14.7.0",
@@ -23,7 +21,8 @@
     "next-transpile-modules": "^7.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "require-context": "^1.1.0"
   },
   "devDependencies": {
     "typescript": "^4.3.2"
