--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "require-context": "^1.1.0"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.1",
     "typescript": "^4.3.2"
   }
 }
