--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
-    "@jesus-film/ark.elements.core": "^0.0.6",
-    "@jesus-film/ark.providers.core": "^0.0.1",
+    "@jesus-film/ark.compounds.core": "^0.0.1",
+    "@jesus-film/ark.elements.core": "^0.0.8",
+    "@jesus-film/ark.providers.core": "^0.0.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "graphql": "^14.7.0",
